# sonic-csv

./: Cargo.toml  README.md  csv.rs
benches/: basic.rs
src/: csv_simd.rs  csv_simd_bespoke.rs  lib.rs  simd_read.rs
